--- a/package.json
+++ b/package.json
@@ -9,9 +9,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@visx/axis": "^3.12.0",
+    "@visx/grid": "^3.12.0",
+    "@visx/group": "^3.12.0",
+    "@visx/responsive": "^3.12.0",
+    "@visx/scale": "^3.12.0",
+    "framer-motion": "^11.0.3",
+    "lucide-react": "^0.562.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "framer-motion": "^11.0.3"
+    "react-router-dom": "^7.11.0",
+    "recharts": "^3.6.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react-swc": "^3.5.0",
